--- a/index.html
+++ b/index.html
@@ -2,8 +2,36 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Flight Edge — Never Overpay for Flights</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Flight Edge – Find the Cheapest Seller for Any Flight</title>
+
+<meta name="description" content="Flight Edge scans every airline ticket seller and shows you where the same flight is sold cheaper. Stop overpaying for flights.">
+<meta name="keywords" content="cheap flights, flight price comparison, cheapest flights, airfare deals, airline tickets, flight arbitrage, skyscanner alternative, kayak alternative">
+<meta name="author" content="Flight Edge">
+
+<meta property="og:title" content="Flight Edge – Never Overpay for Flights">
+<meta property="og:description" content="We reveal which website sells the same flight cheaper. Save up to 40% by booking from the cheapest seller.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://codemania-100.github.io/flight-edge-site/">
+<meta property="og:image" content="https://codemania-100.github.io/flight-edge-site/og.png">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Flight Edge – Cheapest Flight Sellers">
+<meta name="twitter:description" content="Same flight, different prices. We show you the cheapest seller.">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Flight Edge",
+  "url": "https://codemania-100.github.io/flight-edge-site/",
+  "description": "Find the cheapest seller for any flight by comparing airline ticket providers in real time.",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://t.me/Fli_ght_bot?start=check",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
 <style>
 body {
   font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
